fixed spacing

--- a/wp-content/themes/crander/sass/style.scss
+++ b/wp-content/themes/crander/sass/style.scss
@@ -398,7 +398,7 @@ footer {
   }
 }
 @media (max-width: 767px) {
-  .recent-projects .span4 {
+  .body-29 #content .recent-projects .span4 {
     margin-bottom: 15px;
   }
 }
